# VoiceBoard

./: App.tsx  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/whisper/: whisper_jni.cpp
android/app/src/main/java/com/samnick/voiceboard/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/samnick/voiceboard/a11y/: A11yBus.kt  VoiceBoardAccessibilityService.kt
android/app/src/main/java/com/samnick/voiceboard/bridge/: VoiceBoardModule.kt  VoiceBoardPackage.kt
android/app/src/main/java/com/samnick/voiceboard/core/: KeyboardLocale.kt  ModeProcessor.kt  PrefsBridge.kt
android/app/src/main/java/com/samnick/voiceboard/ime/: ModeProcessor.kt  PrefsBridge.kt  TranscriptionManager.kt  VoiceBoardIME.kt  VoiceBoardKeyboardView.kt
android/app/src/main/java/com/samnick/voiceboard/overlay/: AudioCapture.kt  ModeMenuView.kt  OverlayPillView.kt  OverlayService.kt
android/app/src/main/java/com/samnick/voiceboard/transcription/: GroqEngine.kt  LocalWhisperEngine.kt  ModelDownloader.kt  TranscriptionEngine.kt  TranscriptionRouter.kt
android/app/src/main/java/com/voiceboard/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/drawable/: bg_key.xml  bg_mic_button.xml  bg_pill_active.xml  bg_pill_inactive.xml  ic_backspace.xml  ic_keyboard.xml  ic_launcher_foreground.xml  ic_mic.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  method.xml
ios/: Podfile
ios/VoiceBoard/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/VoiceBoard.xcodeproj/: project.pbxproj
ios/VoiceBoard.xcodeproj/xcshareddata/xcschemes/: VoiceBoard.xcscheme
src/components/: ConsoleView.tsx  StatusCard.tsx
src/native/: VoiceBoardModule.ts
src/screens/: HomeScreen.tsx  SettingsScreen.tsx
src/utils/: claudeApi.ts  prompts.ts  storage.ts
